# Programming-Lab3

./: CMakeLists.txt  readme.md
cli/: interface.cpp  interface.h
include/Base/: DynamicArray.h  LinkedList.h
include/Sequences/: ArraySequence.h  ListSequence.h  SequenceFunctions.h
include/Specialized/: BitSequence.h  Deque.h  Queue.h  SequenceCollection.h  Stack.h  Vector.h
src/: newfile.cpp
tests/: test_deque.cpp  test_dynamic_array.cpp  test_linked_list.cpp  test_queue.cpp  test_sequence.cpp  test_stack.cpp
